--- a/wp-content/themes/GLSA/style.css
+++ b/wp-content/themes/GLSA/style.css
@@ -875,7 +875,7 @@ div.nav-menu > ul {
 	display: block;
 	font-size: 10pt;
 	line-height: 1;
-	padding: 15px 20px;
+    padding: 17px 20px 4px;
 	text-decoration: none;
 	background-image: url("http://dev.greenlakechildcare.org/wp-content/themes/GLSA/images/separator_header.gif");
     background-position: left center;
@@ -895,13 +895,13 @@ div.nav-menu > ul {
 
 .nav-menu .sub-menu,
 .nav-menu .children {
-	background-color: #220e10;
+	background: url("/wp-content/themes/GLSA/images/headers/circle.png") repeat scroll 0 0 rgba(0, 0, 0, 0);
 	border: 2px solid #f7f5e7;
 	border-top: 0;
 	display: none;
 	padding: 0;
 	position: absolute;
-	left: -2px;
+	left: 7px;
 	z-index: 99999;
 }
 
@@ -914,14 +914,9 @@ div.nav-menu > ul {
 
 ul.nav-menu ul a,
 .nav-menu ul ul a {
-	color: #fff;
+	color: #145535;
 	margin: 0;
-	width: 200px;
-}
-
-ul.nav-menu ul a:hover,
-.nav-menu ul ul a:hover {
-	background-color: #db572f;
+	padding: 10px;
 }
 
 ul.nav-menu li:hover > ul,
@@ -2602,6 +2597,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3caf74', end
 	margin: -10px auto 0;
 }
 
+#logohomeblock img#logohome {
+    float: left;
+}
 
 /**
  * 8.0 Media Queries
@@ -3189,9 +3187,15 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3caf74', end
 	}
 
 	#quoteblock {
-		background: url("/img/bg_quote.jpg") repeat-x scroll 0 0 rgba(0, 0, 0, 0);
     min-height: 174px;
 	}
+
+	.widget div#quoteblock{
+		display: block;
+    position: relative;
+    width: 65%;
+	}
+
 
 	.photoblock p{
 		margin-bottom: -24px;
@@ -3214,3 +3218,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3caf74', end
     padding: 0 1em 0 0;
     text-align: left;
 	}
+
+.wpcf7-form p {
+    float: left;
+    margin: 5px;
+}
