--- a/wp-content/plugins/backup/public/css/bgstyle.less.css
+++ b/wp-content/plugins/backup/public/css/bgstyle.less.css
@@ -276,7 +276,7 @@
 }
 
 .sg-wrap-container {
-  height: 540px;
+  height: 650px;
   width: 100%;
 }
 
@@ -7819,12 +7819,13 @@
   margin-left: 5px;
   display: none;
 }
+
 .sg-wrapper-less .sg-alert-pro {
   color: white;
-  padding: 20px;
+  margin: 20px;
   text-align: center;
-  margin-top: 20px;
 }
+
 .sg-wrapper-less .sg-star {
   color: gold;
   font-size: 24px;
