[+] Updating WP-Esignature plugin approveme

--- a/wp-content/plugins/e-signature/assets/css/esig-main.css
+++ b/wp-content/plugins/e-signature/assets/css/esig-main.css
@@ -79,3 +79,8 @@ a:focus, a:hover {
 .bottomMargin {
     margin-bottom: 10px !important;
 }
+
+
+input[type=checkbox], input[type=radio] {
+   margin: 4px 7px !important;  
+}
