--- a/wp-content/plugins/e-signature/assets/css/style.css
+++ b/wp-content/plugins/e-signature/assets/css/style.css
@@ -564,6 +564,7 @@ label
     list-style-type: none;
     /*margin: 4em 4em 0em 1.2em;*/
     position: relative;
+    display: none!important;
 }
 .esign-form-document-panel
 {
