--- a/wp-content/themes/GLSA/style.css
+++ b/wp-content/themes/GLSA/style.css
@@ -158,7 +158,7 @@ h2 {
 
 h3 {
 	color: #145535;
-    font-size: 1em;
+    font-size: 2em;
     font-weight: bold;
     margin: 0.4em 0;
     font-family: sans-serif;
@@ -395,6 +395,20 @@ input[disabled] {
 input[type="checkbox"],
 input[type="radio"] {
 	padding: 0;
+}
+
+
+#wpcf7-f493-p365-o1 .wpcf7-checkbox input{
+    width: 70px;
+    height: 70px;
+}
+
+#wpcf7-f493-p365-o1 .wpcf7-checkbox span span.wpcf7-list-item-label{
+  display:none;
+}
+
+.ssn{
+  width:15%
 }
 
 input[type="search"] {
@@ -1023,7 +1037,7 @@ ul.nav-menu li:hover > ul,
 .entry-title {
 	color: #145535;
     font-family: sans-serif;
-    font-size: 1.4em;
+    font-size: 2.2em;
     font-weight: bold;
     margin: 0 0 5px;
 }
@@ -1156,6 +1170,11 @@ ul.nav-menu li:hover > ul,
 
 .entry-content img.alignright,
 .entry-content .wp-caption.alignright {
+}
+
+.break{
+    height: 30px;
+    clear: both;
 }
 
 footer.entry-meta {
